Java 21+ supported